--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Profile &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Portfolio Roberto Pangihutan Situmeang</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="description" content="Porttfolio Data Analyst" />
+	<meta name="keywords" content="Data, Data Analyst, Analyst, Data Analytics, Analytics" />
 	<meta name="author" content="freehtml5.co" />
 
 	<!-- 
@@ -67,7 +67,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/Profile.jpg);"></div>
+							<div class="profile-thumb" style="background: url(images/Profile.png);"></div>
 							<h1><span>Roberto Pangihutan Situmeang</span></h1>
 							<h3><span>Data Analyst | Radio Network Engineer</span></h3>
 							<p>
